# Interveritas

./: Cargo.toml  README.md
src/: citation.rs  list_parser.rs  main.rs  reference_analysis.rs
src/api/: citation_api.rs  citation_list_api.rs  mod.rs
src/models/: author.rs  citation.rs  citation_list.rs  journal.rs  mod.rs  pasted_list.rs  topic.rs
src/repository/: mod.rs  mongodb_repo.rs
src/utils/: google_scholar_list.rs  mod.rs  parse_citation.rs  parse_list.rs
